# montecarlo-system

./: .gitignore  fns.txt
funcs_consumer/: pyproject.toml
funcs_consumer/src/: main.py
funcs_consumer/src/protos/: function_service_pb2_grpc.py
funcs_consumer/src/rabbitmq/: connection.py
funcs_consumer/src/services/: function_executer.py  str_function_parser.py
funcs_servicer/: fns.txt  pyproject.toml
funcs_servicer/src/: App.py
funcs_servicer/src/protos/: function_service.proto  function_service_pb2.py  function_service_pb2_grpc.py
funcs_servicer/src/rabbitmq/: connection.py
funcs_servicer/src/services/: function_servicer.py  functions_in_file.py  scenario_generator.py
funs_consumer/: pyproject.toml
funs_servicer/src/: .env  App.py
funs_servicer/src/rabbitmq/: connection.py
funs_servicer/src/services/: functions_in_file.py  scenario_generator.py
funs_servicer/src/services/interfaces/: Function_Reader.py
monitor/app/: pyproject.toml
monitor/app/src/: App.py  client_card.py  main.py
monitor/server/: pyproject.toml
monitor/server/database/: results.csv
monitor/server/src/: main.py
monitor/server/src/rabbitmq/: connection.py
monitor/server/src/services/: information_servicer.py
monitor_servicer/: pyproject.toml
monitor_servicer/app/: pyproject.toml
monitor_servicer/app/src/: main.py
monitor_servicer/server/: pyproject.toml
monitor_servicer/server/src/: main.py
monitor_servicer/shared_lib/: pyproject.toml
monitor_servicer/shared_lib/shared_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+13 files in other folders)
