[project]
name = "shared-lib"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "grpcio>=1.76.0",
    "protobuf>=5.28.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["shared_lib*"]
